--- a/app/views/home/inicio.html.erb
+++ b/app/views/home/inicio.html.erb
@@ -1,13 +1,40 @@
-<div class='dhonishow autoplay_4dot5'>
-	<%= image_tag("fotos/Said1.jpg", :alt => "Sistema Anticipado de Inscripción y Distribución") %>
-	<%= image_tag("fotos/DesSis1.jpg", :alt => "Desarrollo de Sistemas", :size => "500x300") %>
-	<%= image_tag("fotos/Certif1.jpg", :alt => "Certificación") %>
-	<%= image_tag("fotos/EstadEduc1.jpg", :alt => "Estadística Educativa", :size => "500x300") %>
-	<%= image_tag("fotos/SopTec1.jpg", :alt => "Soporte Técnico", :size => "500x300") %>
-	<%= image_tag("fotos/Catalogo1.jpg", :alt => "Catálogo de Centros de Trabajo", :size => "500x300") %>
-</div>
-<p></p>
-<%= link_to "Estadística Educativa", estadistica_path, :class => "destaca_button1 round" %>
-<%= link_to "Sistema Anticipado de Inscripción y Asignación", said_path, :class => "destaca_button2 round" %>
-<%= link_to "Desarrollo de Sistemas", desarrollo_path, :class => "destaca_button3 round" %>
+
+<br />
+<center><h2>Grupo musical ' La Seña '</h2></center>
+<br />
+<h3> Amenizamos todo tipo de evento social:</h3>
+<br />
+<ul Style = "padding-left: 30px;">
+	<li>Bodas</li>
+	<li>XV años</li>
+	<li>Graduaciones</li>
+	<li>Aniversarios</li>
+	<li>Eventos especiales</li>
+	<li>...</li>
+</ul>
+
+<h3> Contamos con un amplio repertorio de diferentes géneros y estilos musicales:</h3>
+<br />	
+<ul Style = "padding-left: 30px;">
+	<li>Cumbia</li>
+	<li>Salsa</li>
+	<li>Cha cha cha</li>
+	<li>Mambo</li>
+	<li>Danzón</li>
+	<li>Rock & Roll</li>
+	<li>Pop</li>
+	<li>Duranguense</li>
+	<li>Banda</li>
+	<li>Instrumental</li>
+	<li>...</li>
+</ul>
+
+<p>Audio e iluminación profesional y un gran ambiente de alegría, 
+	darán a tus eventos ese toque tan especial que nos caracteriza.</p>
+	<br />
+<p><strong>Ponte en contacto con nosotros y con gusto te atenderemos.</strong></p>
+
+<div style="float: right;"><%= link_to(logo_La_Se, root_path) %></div>
+
+	<!-- <%= link_to "Desarrollo de Sistemas", desarrollo_path, :class => "destaca_button3 round" %>  -->
 <br />
