--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,18 +1,16 @@
-<footer>
+<footer class = "round">
 	<nav class="round">
 		<ul>
 			<li><%= link_to "Inicio", root_path %></li>
 			<li><%= link_to "Quienes somos", quienes_somos_path %></li>
-			<li><%= link_to "Servicios", servicios_path %></li>
+			<li><%= link_to "Videos", videos_path %></li>
 			<li><%= link_to("Contacto", contacto_path) %></li>
 		</ul>
 	</nav>
-	<span id="derechos">Todos los derechos reservados. 2012.</span>
-	<p>SECRETARÍA DE EDUCACIÓN</p>
-    <p>SUBSECRETARÍA DE EDUCACIÓN BÁSICA Y NORMAL</p>
-    <p>UNIDAD DE PLANEACIÓN, EVALUACIÓN Y CONTROL ESCOLAR</p>
-    <p>AV. HIDALGO PONIENTE No.104 1er PISO (ACCESO POR ALDAMA NTE. No. 100) COL. CENTRO, TOLUCA, ESTADO DE MÉXICO C. P. 50000.<p></p> 
-	<p>TEL. (01 722)  2 14 63 11</p>
-	<p>e-mail: upsebyn@edomex.gob.mx</p>
+	<span id="derechos">Todos los derechos reservados. 2013.</span>
+	<p>Grupo musical ' La Seña '</p>
+    <p>San Lorenzo Cuauhtenco, Calimaya, Estado de México</p>
+    <p>Calle: Guerrero # 29, C. P. 52233.   Tel. (722) 2 98 28 83  </p>
+	<p>e-mail: grupolasenia@yahoo.com.mx</p>
 	
 </footer>
